* Fixed reading BAYERPAT key if it was set to NONE
* Fixed StarNet behavior when TIFF compression was ON
* Fixed crash in synthstar (full resynthetize and desaturate)
* Fixed handling widechars in config files (Windows only) which caused a crash at startup
* Fixed crash when selecting datapoints in Plot tab
* Fixed crash when sending a seqplatesolve or seqstarnet command with no other argument
* Reworked GHS commands
* Added a warning when trying to read one-frame SER files

siril 1.2.0-beta1
02/24/23

* Added livestacking mode with darks/CC/flats support, registration and stacking
* Added unlinking channels in autostretch preview
* Added RGB equalization and lightweight (faster) normalisation in stacking options
* Added LRGB composition command and PixelMath command for new offline compositions
* Added Starnet++ integration in GUI and command and mask creation
* Added Star Recomposition tool to mix and stretch starless and starmask images
* Added star intensive care to unsaturate stars
* Added new deconvolution tool with RL, Split Bregman and Wiener algorithms and several PSF generation options (replaces old tool)
* Added new denoising tool
* Added pcc command for headless PCC and plate solving
* Added local KStars star catalogue support for offline astrometry and PCC (NOMAD)
* Added a new framing assistant with several modes and image framing preview
* Added specifying max number of stars for registration
* Added bad pixel map option for preprocess, both in GUI and command
* Added and reviewed commands for offline and automatic post-processing
* Added background level and star count as new sequence filters
* Added option to compute sequence filtering threshold using k-sigma clipping
* Added weighing based on number of stars or wFWHM for stacking
* Added a new threading mechanism for per-image improved performance
* Added star selection from coordinates to seqpsf and star tracking with homography