@@ -13,6 +13,8 @@ xx/xx/23
 * Fixed handling widechars in config files (Windows only) which caused a crash at startup
 * Fixed crash when selecting datapoints in Plot tab
 * Fixed crash when sending a seqplatesolve or seqstarnet command with no other argument
+* Fixed crash in global and 2pass registration, if a selection was active and the sequence had variable image sizes
+* Fixed min and max framing borders calculations if the sequence had variable image sizes
 * Reworked GHS commands
 * Added a warning when trying to read one-frame SER files
 
